--- a/client/app/index.html
+++ b/client/app/index.html
@@ -7,6 +7,8 @@
 <body>
   <div ng-controller="helloWorld">
     <p>{{greeting.text}},World</p>
+    <hello></hello>
+    <input ng-model="greeting.text"/>
   </div>
   <script src="bower_components/angular/angular.js"></script>
   <script src="js/index.js"></script>
