--- a/client/app/index.html
+++ b/client/app/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Which Star</title>
+  <!-- build:css styles/main.css -->
+  <link rel="stylesheet" href="styles/index.css" />
+  <link rel="stylesheet" href="styles/test.css" />
+  <!-- endbuild -->
 </head>
 <body>
   <div ng-controller="helloWorld">
@@ -10,7 +14,11 @@
     <hello></hello>
     <input ng-model="greeting.text"/>
   </div>
+  <!-- build:js js/vendor.js -->
   <script src="bower_components/angular/angular.js"></script>
+  <!-- endbuild -->
+  <!-- build:js js/main.js -->
   <script src="js/index.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
