--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,7 +14,7 @@
     <hello></hello>
     <input ng-model="greeting.text"/>
   </div>
-  <!-- build:js js/vendor.js -->
+  <!-- build:js js/vendor/angular.js -->
   <script src="bower_components/angular/angular.js"></script>
   <!-- endbuild -->
   <!-- build:js js/main.js -->
