--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <title>Which Star</title>
   <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/index.css" />
-  <link rel="stylesheet" href="styles/test.css" />
+  <link rel="stylesheet" href="styles/app.css" />
   <!-- endbuild -->
 </head>
 <body>
