--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,27 +8,19 @@
   <!-- endbuild -->
 </head>
 <body>
-<!--   <div ng-controller="helloWorld">
-    <p>{{greeting}},World</p>
-    <hello></hello>
-    <input ng-model="greeting"/>
-  </div>
-  <div ng-controller="ListCtrl">
-    <ol>
-      <li ng-repeat="name in names">{{name}} from {{departure}}</li>
-    </ol>
-  </div> -->
-  <div ng-view>
-  </div>
+  <div ng-view></div>
 
   <!-- build:js js/vendor.js -->
   <script src="js/lib/angular.js"></script>
   <script src="js/lib/angular-route.js"></script>
+  <script src="js/lib/angular-animate.js"></script>
+  <script src="js/lib/angular-ui-router.js"></script>
   <!-- endbuild -->
   <!-- build:js js/main.js -->
   <!-- <script src="js/index.js"></script> -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/directives.js"></script>
   <!-- endbuild -->
 </body>
 </html>
