--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,11 +8,11 @@
   <!-- endbuild -->
 </head>
 <body>
-  <div ng-view></div>
+    <div ui-view="header"></div>
+    <div ui-view="main"></div>
 
   <!-- build:js js/vendor.js -->
   <script src="js/lib/angular.js"></script>
-  <script src="js/lib/angular-route.js"></script>
   <script src="js/lib/angular-animate.js"></script>
   <script src="js/lib/angular-ui-router.js"></script>
   <!-- endbuild -->
