--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,13 +8,15 @@
   <!-- endbuild -->
 </head>
 <body>
-    <div class="header">
-      <ul class="clearfix">
-          <li><a ui-sref="index" class="header-link">Home</a></li>
-          <li><a ui-sref="tech" class="header-link">Technical Introducation</a></li>
-          <li><a ui-sref="about" class="header-link">Contact</a></li>
-      </ul>
-    </div>
+    <header class="nav-bar">
+      <nav>
+        <ul class="clearfix">
+            <li><a ui-sref="index" class="header-link">Home</a></li>
+            <li><a ui-sref="tech" class="header-link">Technical Introducation</a></li>
+            <li><a ui-sref="about" class="header-link">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <div class="view-container">
       <div ui-view="main" class="view-frame"></div>
     </div>
