--- a/client/app/index.html
+++ b/client/app/index.html
@@ -19,12 +19,14 @@
   <script src="js/lib/angular.js"></script>
   <script src="js/lib/angular-animate.js"></script>
   <script src="js/lib/angular-ui-router.js"></script>
+  <script src="js/lib/angular-resource.js"></script>
   <!-- endbuild -->
   <!-- build:js js/main.js -->
   <!-- <script src="js/index.js"></script> -->
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/directives.js"></script>
+  <script src="js/services.js"></script>
   <!-- endbuild -->
 </body>
 </html>
