add face ++ logic

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -28,5 +28,6 @@
   <script src="js/directives.js"></script>
   <script src="js/services.js"></script>
   <!-- endbuild -->
+  <script type="text/javascript" src="js/lib/facepp-sdk.min.js"></script>
 </body>
 </html>
